AI Microplastics Detection System - YOLOv8 + Flask + React Native

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,24 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-*.egg
 *.egg-info/
-dist/
-build/
 venv/
 .env
 
-# YOLOv8 / Ultralytics
-runs/
-*.pt
-!model/.gitkeep
-
-# Uploads & results
-backend/uploads/
-backend/results/
-
-# Node / React Native
+# Node / Expo
 node_modules/
 .expo/
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
+dist/
 web-build/
+*.tsbuildinfo
+
+# Model weights (too large for GitHub)
+*.pt
+*.onnx
 
 # OS
 .DS_Store
 Thumbs.db
-*.swp
-*.swo
 
-# IDEs
-.vscode/
-.idea/
-*.iml
+# Uploads
+backend/uploads/
